--- a/styles/base.scss
+++ b/styles/base.scss
@@ -3,7 +3,7 @@ html {
 }
 
 body {
-  @apply bg-body font-primary font-normal leading-relaxed text-text;
+  @apply bg-body font-secondary font-normal leading-relaxed text-text;
 }
 
 h1,
@@ -12,7 +12,7 @@ h3,
 h4,
 h5,
 h6 {
-  @apply font-primary font-bold leading-tight text-dark;
+  @apply font-secondary font-bold leading-tight text-dark;
 }
 
 h1,
